corpus/record/comment-inside-record.txt
===
comment inside empty record
===
{## comment
}
---
(lux (record (inline_comment)))

===
comment before record pairs
===
{## comment
#a b
}
---
(lux
  (record
    (inline_comment)
    (record_pair (tag) (identifier))))

===
comment inside pair
===
{#a ## comment
 #b}
---
(lux
  (record
    (record_pair (tag) (inline_comment) (tag))))

===
comment between pairs
===
{#a #b
## comment
 #c #d
}
---
(lux
  (record
    (record_pair (tag) (tag))
    (inline_comment)
    (record_pair (tag) (tag))))
