corpus/record/record-with-non-tags-as-keys.txt
===
record with non-tags as keys
===
{identifier #value {#a b} [+123.0 123]}
---
(source_file 
  (record 
    (record_pair (identifier) (tag))
    (record_pair 
      (record (record_pair (tag) (identifier)))
      (tuple (frac) (nat)))))
